# pytest_examples

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pytest.yml  python.yml  r.yml
python/: pyproject.toml
python/src/: example.py
python/tests/: test_example.py
r/: run_tests.R
r/src/: example.R
r/tests/: test-example.R
src/: __init__.py
tests/: conftest.py
