[project]
name = "testing-examples"
version = "0.1.0"
description = "Testing examples across multiple languages and frameworks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
pythonpath = ["src"]
addopts = "-ra"
markers = [
  "smoke: fast checks that run on every change",
]
